[package]
name = "ratcsv"
version = "0.1.0"
description = "TUI CSV EDITOR"
authors = ["Reinhard Bronner <reinhard_bronner@t-online.de>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
